# copilot-kit-poc

./: .gitignore  AGENT_IN_ADAPTER.md  AGENT_REGISTERED.md  BACKEND_FIX_APPLIED.md  CHECK_EXPORTS.md  DEBUG_FRONTEND.md  DEPLOYMENT_CHECKLIST.md  DEPLOY_CORRECT_STEPS.md  DEPLOY_TO_LANGGRAPH.md  FINAL_FIX.md  FINAL_INSTRUCTIONS.md  FINAL_SOLUTION.md  FIXES_APPLIED.md  FIX_FRONTEND_NOW.md  FRONTEND_UPDATED.md  GITHUB_AUTH_GUIDE.md  GITHUB_SETUP.md  IMMEDIATE_ACTIONS.md  INSTALL_AND_RUN.sh  INSTALL_OFFICIAL.sh  LANGSMITH_UI_GUIDE.md  OFFICIAL_SETUP.md  OPENAI_CONFIG_FIX.md  PUSH_WITH_PROMPT.md  QUICK_START.md  README.md  READY_TO_PUSH.md  REORGANIZE_BACKEND.sh  REORGANIZE_NOW.md  RESTART_BACKEND.md  RESTORE_AND_FIX.md  SETUP_COMPLETE.md  SIMPLE_SOLUTION.md  SIMPLIFIED_NO_AGENT.md  SOLUTION.md  START_HERE.md  SWITCH_TO_NODEJS_RUNTIME.md  TEST_BACKEND.md  TEST_CHAT_UI.md  UPDATED_OFFICIAL_SETUP.md  (+8 more)
backend/: .env.example  .gitignore  README.md  README_DEPLOYMENT.md  SETUP_COMPLETE.md  agent.py  docker-compose.yml  langgraph.json  pyproject.toml  run.sh  run_langgraph.sh  server_copilotkit.py  test_graphql.sh
backend/nodejs-runtime/: README.md  example-mcp-server.mjs  package-lock.json  package.json  server.mjs
backend/python-implementations/: requirements.txt  requirements_official.txt  server.py  server_graphql.py  server_manual.py  server_ndjson.py  server_official.py
src/: Agent.ts  AgenticChat.tsx  AgenticGenerativeUI.tsx  App.tsx  LineGraph.tsx  index.css  main.tsx  style.css
src/components/: CampaignDaypartingForm.tsx  Canvas.tsx  ChartWidget.tsx  ChatbotView.tsx  (+11 more)
(+17 files in other folders)
